Fixed dropdown bug on mobile

--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ body[data-theme="light"] .pokelist-dropdown .selected:focus {
     max-width: 95vw;
     padding: 10px;
   }
-  .pokelist-dropdown {
+  .pokelist-dropdown .selected {
     font-size: 0.9rem;
   }
 }
